updates and fixes